Fix a Java warning